# nixl-20250820

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-CPP.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Doxyfile  README.md  maketest_symlinks.sh  meson.build  meson_options.txt  nixl.pc.in  pyproject.toml  requirements.txt
.gitlab/: build.sh  (+5 more)
benchmark/kvbench/: .gitignore  README.md  main.py  pyproject.toml
benchmark/kvbench/commands/: __init__.py  args.py  io_size.py  kvcache.py  nixlbench.py  plan.py  profile.py
benchmark/kvbench/docs/: adding-a-new-model-architecture.md  creating-a-model-config.md  ct-perftest.md  tutorial-gds.md
benchmark/kvbench/examples/: block-tp1-pp1.yaml  block-tp1-pp16.yaml  block-tp1-pp2.yaml  block-tp1-pp4.yaml  block-tp1-pp8.yaml  block-tp8-pp16.yaml  block-tp8-pp2.yaml  block-tp8-pp32.yaml  block-tp8-pp4.yaml  block-tp8-pp8.yaml  layer-tp1-pp1.yaml  layer-tp1-pp16.yaml  layer-tp1-pp2.yaml  layer-tp1-pp4.yaml  layer-tp1-pp8.yaml  layer-tp8-pp16.yaml  layer-tp8-pp2.yaml  layer-tp8-pp32.yaml  layer-tp8-pp4.yaml  layer-tp8-pp8.yaml  model_deepseek_r1.yaml  model_llama_3_1_70b.yaml  model_llama_3_1_8b.yaml
benchmark/kvbench/models/: deepseek_r1.py  llama3_1.py  model_config.py  models.py  utils.py
benchmark/kvbench/runtime/: etcd_rt.py  rt_base.py
benchmark/kvbench/test/: custom_traffic_perftest.py  inference_workload_matgen.py  sequential_custom_traffic_perftest.py  test_kvcache.py  traffic_pattern.py
benchmark/nixlbench/: README.md  meson.build  meson_options.txt
benchmark/nixlbench/contrib/: Dockerfile  build.sh
benchmark/nixlbench/src/: main.cpp
benchmark/nixlbench/src/runtime/: meson.build  runtime.cpp  runtime.h
benchmark/nixlbench/src/utils/: meson.build  scope_guard.h  utils.cpp  utils.h
examples/rust/: Cargo.toml
examples/rust/src/: single_process_example.rs
src/: meson.build  nixl_agent.cpp  nixl_descriptors.cpp  nixl_memory_section.cpp  nixl_metadata_stream.cpp  nixl_plugin_manager.cpp
src/api/: meson.build
src/api/cpp/: meson.build  nixl.h  nixl_descriptors.h  nixl_params.h  nixl_types.h
src/api/python/: __init__.py  _api.py  logging.py  meson.build  python_logging.ini
src/bindings/: meson.build
src/bindings/python/: meson.build  nixl_bindings.cpp
src/bindings/rust/: Cargo.toml  README.md  build.rs  meson.build  rust-toolchain.toml  stubs.cpp  wrapper.cpp  wrapper.h
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_listener.cpp  nixl_plugin_manager.cpp  plugin_manager.h  sync.h  telemetry.cpp  telemetry.h  telemetry_event.h  transfer_request.h
src/infra/: mem_section.h  meson.build  nixl_descriptors.cpp  nixl_memory_section.cpp
src/nixl_nw_backends/: meson.build  ucx_backend.cpp  ucx_backend.h  ucx_plugin.cpp
src/nixl_storage_backends/: meson.build
src/nixl_storage_backends/gds/: gds_backend.cpp  gds_backend.h  gds_plugin.cpp  meson.build
src/plugins/: meson.build
src/plugins/cuda_gds/: README.md  gds_backend.cpp  gds_backend.h  gds_plugin.cpp  gds_utils.cpp  gds_utils.h  meson.build
src/plugins/gds_mt/: gds_mt_backend.cpp  gds_mt_backend.h  gds_mt_plugin.cpp  gds_mt_utils.cpp  gds_mt_utils.h  meson.build
src/plugins/gpunetio/: README.md  gpunetio_backend.cpp  gpunetio_backend.h  gpunetio_backend_aux.h  gpunetio_kernels.cu  gpunetio_plugin.cpp  gpunetio_utils.cpp  meson.build
src/plugins/hf3fs/: README.md  hf3fs_backend.cpp  hf3fs_backend.h  hf3fs_log.h  hf3fs_plugin.cpp  hf3fs_utils.cpp  hf3fs_utils.h  meson.build
src/plugins/mooncake/: README.md  meson.build  mooncake_backend.cpp  mooncake_backend.h  mooncake_plugin.cpp
src/plugins/posix/: README.md  aio_queue.cpp  aio_queue.h  async_queue.h  meson.build  posix_backend.cpp  posix_backend.h  posix_plugin.cpp  posix_queue.h  queue_factory_impl.cpp  queue_factory_impl.h  uring_queue.cpp  uring_queue.h
src/plugins/ucx/: meson.build  ucx_backend.cpp  ucx_backend.h  ucx_plugin.cpp
src/plugins/ucx_mo/: meson.build  ucx_mo_backend.cpp  ucx_mo_backend.h  ucx_mo_plugin.cpp
src/pybind/: __init__.py  _api.py  meson.build  nixl_bindings.cpp  nixl_utils.cpp  nixl_wrapper.py
src/utils/: README.md  meson.build
src/utils/common/: cyclic_buffer.h  cyclic_buffer.tpp  list_elem.h  meson.build  nixl_log.cpp  nixl_log.h  nixl_time.h  status.h  str_tools.h  util.h  uuid_v4.cpp  uuid_v4.h
src/utils/data_structures/: list_elem.h
src/utils/file/: README.md  file_utils.cpp  file_utils.h  meson.build
src/utils/serdes/: meson.build  serdes.cpp  serdes.h  serdes_test.cpp
src/utils/stream/: meson.build  metadata_stream.cpp  metadata_stream.h
src/utils/sys/: nixl_time.h  str_tools.h
src/utils/ucx/: config.cpp  config.h  meson.build  rkey.cpp  rkey.h  ucx_am_test.cpp  ucx_utils.cpp  ucx_utils.h  ucx_worker_test.cpp
test/: README.md  agent_example.cpp  desc_example.cpp  map_perf.cpp  meson.build  metadata_streamer.cpp  nixl_gds_test.cpp  nixl_test.cpp  p2p_socket_test.cpp  test_plugin.cpp  ucx_backend_multi.cpp  ucx_backend_test.cpp
test/gtest/: common.cpp  common.h  error_handling.cpp  main.cpp  meson.build  metadata_exchange.cpp  multi_threading.cpp  plugin_manager.cpp  query_mem.cpp  telemetry_test.cpp  test_transfer.cpp  ucx_tests.cpp
test/gtest/mocks/: gmock_engine.cpp  gmock_engine.h  meson.build  mock_backend_engine.cpp  mock_backend_engine.h  mock_backend_plugin.cpp  mock_basic_plugin.cpp  mock_dram_engine.cpp  mock_dram_engine.h  mock_dram_plugin.cpp
test/gtest/plugins/: memory_handler.h  meson.build  obj_plugin.cpp  plugins_common.h  transfer_handler.h
test/gtest/unit/: main.cpp  meson.build
test/nixl/: agent_example.cpp  desc_example.cpp  meson.build  nixl_test.cpp  test_plugin.cpp
test/python/: blocking_send_recv_example.py  desc_perf.py  desc_perf_test.py  nixl_api_test.py  nixl_bindings_test.py  nixl_exception_test.py  nixl_wrapper_test.py  prep_xfer_perf.py  test_nixl_api.py  test_nixl_bindings.py
test/unit/: meson.build
test/unit/plugins/: meson.build
test/unit/utils/: meson.build
(+134 files in other folders)
