# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["meson-python", "pybind11", "patchelf", "libucx-cu12"]
build-backend = "mesonpy"

[project]
name = 'nixl'
version = '0.1.0'
description = 'NIXL Python API'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
  {name = 'Timothy Stamler', email = 'tstamler@nvidia.com'},
  {name = 'Moein Khazraee', email = 'moein@nvidia.com'},
  {name = 'Vishwanath Venkatesan', email = 'vvenkatesan@nvidia.com'},
  {name = 'Omri Kahalon', email = 'omrik@nvidia.com'},
]

[tool.meson-python.args]
setup = ['-Ddisable_gds_backend=true', '-Dinstall_headers=false', '-Dstatic_plugins=UCX']
