# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "NIXLKVBench"
version = "0.2.0"
description = "Benchmarking utility for testing KVCache transfers in large language models (LLMs) using the NIXL runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click==8.1.7",
    "numpy==2.3.1",
    "pytest==7.4.4",
    "pyyaml>=6.0.2",
    "etcd3>=0.12.0",
    "tabulate==0.9.0",
    "torch==2.7.0",
    "tqdm==4.66.5",
    "nixl",
]

[tool.setuptools.packages.find]
include = ["models*", "runtime*", "commands*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
